--- a/book/less/structure.less
+++ b/book/less/structure.less
@@ -192,7 +192,7 @@ section.section3{
 	}
 	h1{
 		text-align: center;
-		font-family:"Proxima Bold", sans-serif;
+		font-family:"Proxima", sans-serif;
 		font-weight:800;
 		text-transform: uppercase;
 		font-size:4.8rem;
@@ -214,6 +214,9 @@ section.section4{
 		text-transform: uppercase;
 		font-size:6.0rem;
 		font-weight:900;
+		span.red{
+			font-family: "Proxima", sans-serif;
+		}
 	}
 	.resume{
 		position: relative;
@@ -237,7 +240,8 @@ section.section4{
 		font-size:3.0rem;
 		text-align: left;
 		span.sea{
-			font-weight:900;
+			
+			font-weight:700;
 		}
 	}
 }
@@ -266,6 +270,8 @@ section.section6{
 		h1{
 			font-size:7.2rem;
 			margin-bottom:20px;
+			font-family: "Proxima", sans-serif;
+			font-weight:800;
 		}
 		.right{
 			.border_box;
@@ -299,6 +305,10 @@ section.section7{
 			font-family: "Proxima Bold", sans-serif;
 			font-size:6.0rem;
 			margin-bottom:10px;
+			span.bold{
+				font-family: "Proxima", sans-serif;
+				font-weight:800;
+			}
 		}
 		p{
 			margin:15px 0;
@@ -328,10 +338,11 @@ section.section8{
 			width: 55%;
 			height: 100%;
 			h1{
-				font-family: "Proxima Bold", sans-serif;
+				font-family: "Proxima", sans-serif;
 				font-weight:bold;
 				font-size:7rem;
 				margin:20px 0;
+				font-weight:800;
 			}
 			ul{
 				.ul-clean;
@@ -424,8 +435,8 @@ section.section10{
 				font-weight:bold;
 				font-size:4.0rem;
 				.red{
-					font-family:"Proxima Bold", sans-serif;
-					font-weight:bold;
+					font-family:"Proxima", sans-serif;
+					font-weight:800;
 				}
 			}
 			form{
