--- a/book-2/less/structure.less
+++ b/book-2/less/structure.less
@@ -73,11 +73,17 @@ section.header{
 				padding:0 10px;
 			}
 		}
+		.player{
+			position: relative;
+			float: left;
+			width: 50%;
+			height: 410px;
+		}
 		form{
 			.border_box;
 			position: relative;
 			float: right;
-			width: 50%;
+			width: 42%;
 			margin: 20px;
 			div.start{
 				position: relative;
