--- a/book-5/less/styles.less
+++ b/book-5/less/styles.less
@@ -1,5 +1,5 @@
 /*ГЛОБАЛЬНЫЕ ПЕРЕМЕННЫЕ*/
-
+@import url('http://dowlatow.justclick.ru/media/css/page_ext.css');
 /*ЦВЕТОВАЯ СХЕМА*/
 @white: #fff; //Белый цвет
 @sea: #51727d; //Морской
