--- a/book-5/less/structure.less
+++ b/book-5/less/structure.less
@@ -1,164 +1,171 @@
-label{
-	display: block;
-}
-input[type="text"]{
-	.border_radius(4px);
-	.border_box;
-	display: block;
-	padding: 12px 12px;
-	position: relative;
-	background: @white;
-	font-size:1.8rem;
-	width: 100%;
-	border:solid 1px #fff;
-	color:@sea;
-	margin:10px auto;
-}
-input[type="submit"]{
-	.border_radius(4px);
-	display: block;
-	background: #e74c3c;
-	padding:12px 40px;
-	border:none;
-	font-size:1.7rem;
-	font-family:"Open Sans", sans-serif;
-	font-weight:600;
-	cursor: pointer;
-	color:#fff;
-	margin:10px 0;
-	&:hover{
-		background: #e74c3c - #111;
-	}
-}
-html, body{
-	height: 100%;
+label {
+    display: block;
 }
 
-body{
-	background: url('../images/main-bg.jpg') center center no-repeat;
-	background-size:cover;
-	overflow: hidden;
+input[type="text"] {
+    .border_radius(4px);
+    .border_box;
+    display: block;
+    padding: 12px 12px;
+    position: relative;
+    background: @white;
+    font-size: 1.8rem;
+    width: 100%;
+    border: solid 1px #fff;
+    color: @sea;
+    margin: 10px auto;
 }
 
-.wrapper{
-	.border_box;
-	overflow: hidden;
-	width: 80%;
-	height: auto;
-	max-width:1180px;
-	min-width:860px;
-	margin:auto;
+input[type="submit"] {
+    .border_radius(4px);
+    display: block;
+    background: #e74c3c;
+    padding: 12px 40px;
+    border: none;
+    font-size: 1.7rem;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 600;
+    cursor: pointer;
+    color: #fff;
+    margin: 10px 0;
+    &:hover {
+        background: #e74c3c - #111;
+    }
 }
-section.page{
-	position: relative;
-	width: 100%;
-	height:100%;
-	background: url('../images/header-bg.jpg') center center;
-	.window-container{
-		position: fixed;
-		top:0;
-		left:0;
-		z-index: 3;
-		width: 100%;
-		height: 100%;
-		background: url('../images/fader.png');
-		display:none;
-		.window{
-			position: relative;
-			margin:auto;
-			width: 860px;
-			height: 600px;
-			top:50%;
-			margin-top:-300px;
-			#player{
-				width: 100%;
-				height: 100%;
-			}
-			.close{
-				position: absolute;
-				right:-50px;
-				top:-40px;
-				width: 27px;
-				height: 27px;
-				cursor: pointer;
-				background: url('../images/icons/close.png');
-			}
-		}
-	}
-	.texture{
-		width: 100%;
-		height: 100%;
-		position: fixed;
-		top:0;
-		left:0;
-		z-index: 1;
-		background: url('../images/texture-strong.png');
-	}
-	video{
-		position: fixed;
-		top:0;
-		left:0;
-		min-width: 100%;
-		min-height: 100%;
-	}
-	.wrapper{
-		position: relative;
-		width: 860px;
-		height: 600px;
-		margin-left:auto;
-		margin-right:auto;
-		top:50%;
-		margin-top:-300px;
-		z-index: 2;
-		h1{
-			font-size:2.5rem;
-			color:#fff;
-			font-weight:700;
-			text-align: center;
-		}
-		h2{
-			font-size:3.6rem;
-			font-weight:600;
-			text-align: center;
-			color:#fff;
-			text-transform: uppercase;
-		}
-		.play.icon{
-			width: 67px;
-			height: 67px;
-			margin:85px auto;
-			background: url('../images/icons/play.png');
-			cursor: pointer;
-		}
-		p.endnote{
-			color:#fff;
-			font-size:3.0rem;
-			text-align: center;
-			font-weight: 300;
-		}
-		form{
-			.border_box;
-			position: relative;
-			width: 100%;
-			input[type="text"]{
-				position: relative;
-				float: left;
-				display: block;
-				width: 27%;
-				margin-right:3%;
-				color:#000;
-			}
-			input[type="submit"]{
-				position: relative;
-				float: left;
-				display: block;
-				width: 40%;
-			}
-		}
-		p.confidencial{
-			text-align: center;
-			color:rgba(139, 158, 176, 0.8);
-			font-size:1.4rem;
-		}
-	}
+
+html,
+body {
+    height: 100%;
 }
+
+body {
+    background: url('../images/main-bg.jpg') center center no-repeat;
+    background-size: cover;
+    overflow: hidden;
+}
+
+.wrapper {
+    .border_box;
+    overflow: hidden;
+    width: 80%;
+    height: auto;
+    max-width: 1180px;
+    min-width: 860px;
+    margin: auto;
+}
+
+section.page {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: url('../images/header-bg.jpg') center center;
+    .window-container {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 3;
+        width: 100%;
+        height: 100%;
+        background: url('../images/fader.png');
+        display: none;
+        .window {
+            position: relative;
+            margin: auto;
+            width: 860px;
+            height: 600px;
+            top: 50%;
+            margin-top: -300px;
+            #player {
+                width: 100%;
+                height: 100%;
+            }
+            .close {
+                position: absolute;
+                right: -50px;
+                top: -40px;
+                width: 27px;
+                height: 27px;
+                cursor: pointer;
+                background: url('../images/icons/close.png');
+            }
+        }
+    }
+    .texture {
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        background: url('../images/texture-strong.png');
+    }
+    video {
+        position: fixed;
+        top: 0;
+        left: 0;
+        min-width: 100%;
+        min-height: 100%;
+    }
+    .wrapper {
+        position: relative;
+        width: 860px;
+        height: 600px;
+        margin-left: auto;
+        margin-right: auto;
+        top: 50%;
+        margin-top: -300px;
+        z-index: 2;
+        h1 {
+            font-size: 2.5rem;
+            color: #fff;
+            font-weight: 700;
+            text-align: center;
+        }
+        h2 {
+            font-size: 3.6rem;
+            font-weight: 600;
+            text-align: center;
+            color: #fff;
+            text-transform: uppercase;
+        }
+        .play.icon {
+            width: 67px;
+            height: 67px;
+            margin: 85px auto;
+            background: url('../images/icons/play.png');
+            cursor: pointer;
+        }
+        p.endnote {
+            color: #fff;
+            font-size: 3.0rem;
+            text-align: center;
+            font-weight: 300;
+        }
+        form {
+            .border_box;
+            position: relative;
+            width: 100%;
+            input[type="text"] {
+                position: relative;
+                float: left;
+                display: block;
+                width: 27%;
+                margin-right: 3%;
+                color: #000;
+            }
+            input[type="submit"] {
+                position: relative;
+                float: left;
+                display: block;
+                width: 40%;
+            }
+        }
+        p.confidencial {
+            text-align: center;
+            color: rgba(139, 158, 176, 0.8);
+            font-size: 1.4rem;
+        }
+    }
+}
+
+div {}
