Бордеры для кнопок

--- a/webinar/less/structure.less
+++ b/webinar/less/structure.less
@@ -85,6 +85,7 @@
                 -o-border-radius:3px;
                 -moz-border-radius:3px;
                 -webkit-border-radius:3px;
+                border:solid 1px #27b954;
                 position: relative;
                 width: 380px;
                 color: #ffffff;
@@ -116,8 +117,10 @@
         -o-border-radius:3px;
         -moz-border-radius:3px;
         -webkit-border-radius:3px;
+        text-transform: uppercase;
         width: 100%;
         max-width:700px;
+        border:solid 1px #3e80ca;
         color: #ffffff;
         font: 700 24px 'PT Sans';
         margin:40px auto 80px auto;
