--- a/consult/less/interface.less
+++ b/consult/less/interface.less
@@ -270,7 +270,7 @@ select.select2{
     }
 }
 .dashed{
-    border:dashed 1px @sea_light;
+    border:dashed 1px #b9d4cc;
 }
 .b-radius{
     border-radius:4px;
@@ -297,7 +297,7 @@ select.select2{
     border-radius:10px;
     padding:0 10px;
     border:solid 1px @yellow_dark;
-    p {
+    p{
         margin:4px auto;
         text-align: center;
         &.value{
@@ -339,5 +339,12 @@ a.dotts{
         display: block;
         float: left;
         margin-right: 2px;
+    }
+}
+ul.badge-marked {
+    li {
+        background: url('../images/interface/badge.png') left 2px no-repeat;
+        padding-left: 20px;
+        margin:3px 0;
     }
 }
