--- a/consult/less/page_profile.less
+++ b/consult/less/page_profile.less
@@ -252,296 +252,358 @@ body.page-profile{
                 .review {
                     box-sizing:border-box;
                     -moz-box-sizing:border-box;
-                    padding: 10px 20px 0 20px;
+                    padding: 10px 20px 30px 20px;
+                    margin-bottom: 60px;
                     .quote-arrow {
                         position: absolute;
                         width: 43px;
                         height: 25px;
                         background: url('../images/quote-arrow.png');
                         bottom:-25px;
-                        left:30px;
+                        left:60px;
                     }
                     .content {
                     }
                     .raiting-block {
                         .fa {
+                            color:@yellow_dark;
+                            font-size: 2.0rem;
+                            font-weight: normal;
+                            margin-right: 3px;
                             &.fa-star{
                             }
                         }
                     }
                     .author {
-                    }
-                    .photo {
-                    }
-                    img {
-                    }
-                    .text {
-                        p {
+                        overflow: hidden;
+                        margin-top: 25px;
+                        .photo {
+                            border-radius:50px;
+                            -moz-border-radius:50px;
+                            -o-border-radius:50px;
+                            -webkit-border-radius:50px;
+                            overflow: hidden;
+                            width: 50px;
+                            height: 50px;
+                            float: left;
+                            img {
+                                display: block;
+                                min-width:100%;
+                                min-height:100%;
+                            }
                         }
-                    }
-                    .author-name {
-                    }
-                    .user-name {
-                    }
-                    .toolbar {
-                    }
-                    .review-menu {
-                    }
-                    .dotts {
-                        &:hover{
-                        }
-                        .fa {
-                            &.fa-circle{
+                        .text {
+                            overflow: hidden;
+                            p {
+                                margin-left: 10px;
+                                font-size: 1.2rem;
+                                .author-name, .user-name {
+                                    color: @sky;
+                                    font: 700 1.2rem Roboto;
+                                }
                             }
                         }
                     }
-                    .review-date {
-                    }
-                    .readmore {
-                        &:hover{
+                    .toolbar {
+                        position: absolute;
+                        right:0;
+                        bottom:0;
+                        .review-menu {
+                            float: left;
+                            margin-right: 20px;
+                            margin-top: 11px;
+                        }
+                        .review-date {
+                            float: left;
+                            margin-right: 20px;
+                            font-size: 1.2rem;
+                        }
+                        .readmore {
+                            border-top-left-radius: 5px;
+                            -o-border-top-left-radius: 5px;
+                            -moz-border-top-left-radius: 5px;
+                            -webkit-border-top-left-radius: 5px;
+                            float: left;
+                            text-decoration: none;
+                            color:@sky;
+                            display: block;
+                            font-size: 1.2rem;
+                            border-left:dashed 1px #b9d4cc;
+                            border-top:dashed 1px #b9d4cc;
+                            padding:8px 20px;
+                            &:hover{
+                                text-decoration: underline;
+                            }
                         }
                     }
                 }
-                .review {
-                    .quote-arrow {
+                #load-more-reviews {
+                    width:200px;
+                    text-align: center;
+                    margin:auto;
+                    display: block;
+                }
+            }
+        }
+        .content-block {
+            &.write-review{
+            }
+            form {
+                overflow: hidden;
+                .field {
+                    textarea {
+                        height:98px;
                     }
-                    .content {
+                    label {
+                        color: @sea;
+                        font: 500 1.4rem Roboto;
+                        margin-bottom: 0;
                     }
-                    .raiting-block {
+                    .raiting-block.edit {
+                        float: left;
+                        margin-top: 6px;
                         .fa {
+                            color:@sea;
+                            font-size: 2.0rem;
+                            font-weight: normal;
+                            margin-right: 3px;
                             &.fa-star{
+                                color:@yellow_dark;
                             }
                         }
                     }
-                    .author {
-                    }
-                    .photo {
-                    }
-                    img {
-                    }
-                    .text {
-                        p {
-                        }
-                    }
-                    .author-name {
-                    }
-                    .user-name {
-                    }
-                    .toolbar {
-                    }
-                    .review-menu {
-                    }
-                    .dotts {
-                        &:hover{
-                        }
-                        .fa {
-                            &.fa-circle{
-                            }
-                        }
-                    }
-                    .review-date {
-                    }
-                    .readmore {
-                        &:hover{
-                        }
-                    }
+                }
+                .btn {
+                    display: block;
+                    float: right;
                 }
             }
-            .content-block {
-                &.write-review{
-                }
-            }
-        }
-        #load-more-reviews {
-
-        }
-        form {
-        }
-        .field {
-            input {
-            }
-            .raiting-block {
-                &.edit{
-                }
-                .fa {
-                    &.fa-star{
-                    }
-                }
-            }
-        }
-        textarea {
-        }
-        label {
-        }
-        .btn {
         }
         .information {
             float: right;
             width: 41%;
             h4 {
+                
             }
             .content-block {
-                &.education-list{
+                h5 {
                 }
-            }
-            .content-block {
+                &.education-list, &.proffessions-list{
+                    .item {
+                        margin-bottom: 20px;
+                        .scan{
+                            float: left;
+                            width: 50px;
+                            margin-right: 15px;
+                            img{
+                                display: block;
+                                width: 100%;
+                            }
+                        }
+                        p{
+                            overflow: hidden;
+                        }
+                    }
+                }
                 &.answers-list{
-                }
-            }
-            .item {
-            }
-            .author {
-            }
-            .photo {
-            }
-            img {
-            }
-            .clr {
-            }
-            h5 {
-            }
-            .readmore {
-                &:hover{
-                }
-            }
-            .value {
-            }
-            .fader {
-            }
-            p {
-            }
-            .btn {
-                &:hover{
-                }
-                &.ghost{
-                }
-            }
-        }
-        .specialization {
-            h5 {
-            }
-        }
-        .badge-marked {
-        }
-        li {
-        }
-        .education {
-            h5 {
-            }
-        }
-        .education-list {
-            .item {
-            }
-            .scan {
-            }
-            img {
-            }
-            .title {
-            }
-        }
-        .professional {
-            h5 {
-            }
-        }
-        .professions-list {
-            .item {
-            }
-            .scan {
-            }
-            img {
-            }
-            .title {
-            }
-        }
-        .name {
-        }
-        .job {
-        }
-        .category {
-            .value {
-            }
-        }
-        .content {
-            .fader {
-            }
-            p {
-            }
-        }
-        .ask-question {
-            .btn {
-                &:hover{
+                    .item{
+                        margin-bottom: 30px;
+                    }
+                    .author {
+                        .photo {
+                            float: left;
+                            overflow: hidden;
+                            border-radius:50px;
+                            -o-border-radius:50px;
+                            -moz-border-radius:50px;
+                            -webkit-border-radius:50px;
+                            width: 50px;
+                            height: 50px;
+                            margin-right: 15px;
+                            img {
+                                display: block;
+                            }
+                        }
+                        .about{
+                            overflow: hidden;
+                            p{
+                                margin: 0;
+                                &.name{
+                                    font-size: 1.2rem;
+                                    color:@sky;
+                                    font-weight: 700;
+                                }
+                                &.job{
+                                    font-size: 1.2rem;
+                                    font-weight: 700;
+                                }
+                                &.category{
+                                    font-size: 1.2rem;
+                                    font-weight: 700;
+                                    margin-top: 30px;
+                                    .value{
+                                        color:@sea;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                    .item > h5{
+                        padding-bottom: 0;
+                    }
+                    .content{
+                        p{
+                            margin:5px 0 0 0;
+                        }
+                        .fader{
+                            position: absolute;
+                            width: 100%;
+                            height: 44px;
+                            bottom:0;
+                            background: -webkit-linear-gradient(90deg, #fefefe 0%, #fefefe 16%, rgba(255, 255, 255, 0) 100%);
+                            background: -moz-linear-gradient(90deg, #fefefe 0%, #fefefe 16%, rgba(255, 255, 255, 0) 100%);
+                            background: -o-linear-gradient(90deg, #fefefe 0%, #fefefe 16%, rgba(255, 255, 255, 0) 100%);
+                            background: -ms-linear-gradient(90deg, #fefefe 0%, #fefefe 16%, rgba(255, 255, 255, 0) 100%);
+                            background: linear-gradient(0deg, #fefefe 0%, #fefefe 16%, rgba(255, 255, 255, 0) 100%);
+                            z-index: 1;
+                        }
+                    }
+                    a.readmore{
+                        color: @sky;
+                        font: 400 1.2rem Roboto;
+                        text-decoration: none;
+                        &:hover{
+                            text-decoration: underline;
+                        }
+                    }
+                    a#load-all-answers{
+                        display: block;
+                        width: 80%;
+                        margin:auto;
+                    }
                 }
             }
         }
-        .ask-text {
-        }
-        h3 {
+        .ask-question{
+            margin-top: 20px;
+            overflow: hidden;
+            .ask-text{
+                float: left;
+                h3{
+                    padding:0;
+                }
+            }
+            a{
+                display: block;
+                float: right;
+            }
         }
     }
     .same-users-section {
-        .wrapper {
-        }
-        h4 {
-        }
         .content-block {
             &.same-users-list{
-            }
-        }
-        .same-user {
-        }
-        .photo {
-            p {
-            }
-            .current-value {
-            }
-            .title {
-            }
-        }
-        img {
-            .current-value {
-            }
-        }
-        .lastname {
-        }
-        .firstname {
-        }
-        .rating-block {
-            p {
-            }
-            .current-value {
-            }
-            .title {
+                overflow: hidden;
+                .same-user {
+                    overflow: hidden;
+                    float: left;
+                    width: 14%;
+                    margin-left:3%;
+                    &:first-child{
+                        margin-left: 0;
+                    }
+                    padding-bottom: 20px;
+                    .photo{
+                        width: 100%;
+                        overflow: hidden;
+                        img{
+                            width: 100%;
+                        }
+                    }
+                    p{
+                        text-align: center;
+                        
+                        &.lastname{
+                            margin:0;
+                            margin-top: 5px;
+                            color: @sky;
+                            font: 500 1.4rem Roboto;
+                        }
+                        &.firstname{
+                            margin:0;
+                            color: @sky;
+                            font: 700 1.2rem Roboto;
+                        }
+                    }
+                    .rating-block{
+                        width: 60px;
+                        margin:10px auto 0 auto;
+                    }
+                } 
             }
         }
     }
     .footer {
-        .library {
+        width: 100%;
+        margin-top: 20px;
+        a{
+            text-decoration: none;
+            color:@white;
         }
-        .wrapper {
-        }
-        .title {
-        }
-        h3 {
-        }
-        .library-list {
-        }
-        h4 {
-        }
-        .items-container {
-        }
-        .item {
-            &:hover{
+        section.library {
+            background: @sky;
+            padding:10px 0 20px 0;
+            .title {
+                float: left;
+                width: 25%;
+                h3 {
+                    color:@white;
+                }
+            }
+            .library-list {
+                float: right;
+                width: 75%;
+                margin-top: 8px;
+                h4 {
+                    color:@white;
+                }
+                .items-container {
+                    width: 100%;
+                    .item {
+                        float: left;
+                        width: 33%;
+                        color: @white;
+                        font: 400 1.6rem Roboto;
+                        margin:5px 0;
+                        &:hover{
+                            text-decoration: underline;
+                        }
+                    }
+                }
             }
         }
-        .bottom {
-        }
-        .copyright {
-        }
-        .footer-menu {
-        }
-        li {
-            a {
-                &:hover{
+        section.bottom {
+            background: @sky_dark;
+            padding: 15px 0;
+            overflow: hidden;
+            p.copyright {
+                display: block;
+                float: left;
+                color: @sea;
+                font: 500 1.4rem Roboto;
+                margin-left: 30px;
+            }
+            ul.footer-menu {
+                float: right;
+                margin-top: 13px;
+                li {
+                    float: left;
+                    margin-right:30px;
+                    a {
+                        font: 400 14px Roboto;
+                        &:hover{
+                            text-decoration: underline;
+                        }
+                    }
                 }
             }
         }
