--- a/consult/less/interface.less
+++ b/consult/less/interface.less
@@ -328,6 +328,31 @@ select.select2{
         }
     }
 }
+.raiting-block.value{
+    .fa {
+        color:@yellow_dark;
+        font-size: 2.0rem;
+        font-weight: normal;
+        margin-right: 3px;
+        &.fa-star{
+        }
+    }
+}
+.raiting-block.vote {
+    .fa {
+        color:@sea;
+        font-size: 2.0rem;
+        font-weight: normal;
+        margin-right: 3px;
+        cursor: pointer;
+        &.fa-star{
+            color:@yellow_dark;
+        }
+        &.active{
+            color:@yellow_dark;
+        }
+    }
+}
 a.dotts{
     display: block;
     text-decoration: none;
