--- a/consult/less/page_profile.less
+++ b/consult/less/page_profile.less
@@ -265,14 +265,7 @@ body.page-profile{
                     .content {
                     }
                     .raiting-block {
-                        .fa {
-                            color:@yellow_dark;
-                            font-size: 2.0rem;
-                            font-weight: normal;
-                            margin-right: 3px;
-                            &.fa-star{
-                            }
-                        }
+                        
                     }
                     .author {
                         overflow: hidden;
@@ -359,18 +352,9 @@ body.page-profile{
                         font: 500 1.4rem Roboto;
                         margin-bottom: 0;
                     }
-                    .raiting-block.edit {
+                    .raiting-block.vote {
                         float: left;
                         margin-top: 6px;
-                        .fa {
-                            color:@sea;
-                            font-size: 2.0rem;
-                            font-weight: normal;
-                            margin-right: 3px;
-                            &.fa-star{
-                                color:@yellow_dark;
-                            }
-                        }
                     }
                 }
                 .btn {
